Fixing excess-height in HotTable: Implemented overflow-x. Still a bit buggy (REF: https://github.com/handsontable/handsontable/issues/4141#issuecomment-360429985)

--- a/static/seq-qc/src/index.css
+++ b/static/seq-qc/src/index.css
@@ -116,6 +116,9 @@ h3 {
 .margin-top-15 {
     margin-top: 15px;
 }
+.margin-bottom-75 {
+    margin-bottom: 75px;
+}
 .margin-0 {
     margin: 0px;
 }
@@ -171,7 +174,9 @@ h3 {
 .overflow-y-scroll {
     overflow-y: scroll;
 }
-
+.overflow-x-scroll {
+    overflow-x: scroll;
+}
 
 
 /* COLORS */
